--- a/style.css
+++ b/style.css
@@ -1,7 +1,22 @@
 body{ 
-background-image: linear-gradient(90deg, #51e4f5, #5193f0, #7c51f0);
+ background-image: linear-gradient(90deg, #51e4f5, #5193f0, #7c51f0);
 }
 
 .nav-link {
     color: rgb(248, 248, 248)
 }
+
+.container_box {
+    background-color: aliceblue;
+    margin: 0px 78px;
+    padding: 30px;
+}
+
+h5, h4, h2 {
+        font-family: 'Lato', sans-serif;
+}
+
+.basic_info{
+    font-family: 'Poppins', sans-serif;   
+}
+    
