--- a/style.css
+++ b/style.css
@@ -1,22 +1,66 @@
-body{ 
- background-image: linear-gradient(90deg, #51e4f5, #5193f0, #7c51f0);
+
+body { 
+    background-image: linear-gradient(90deg, #51e4f5, #5193f0, #7c51f0);
 }
 
 .nav-link {
-    color: rgb(248, 248, 248)
+    color: rgb(248, 248, 248);
 }
 
+.home {
+    max-width: 100%;
+}
 .container_box {
     background-color: aliceblue;
     margin: 0px 78px;
     padding: 30px;
 }
 
-h5, h4, h2 {
-        font-family: 'Lato', sans-serif;
+.media-body {
+    max-width: 44%; 
+    margin-top: 40px;
+    padding-right: 2px;
 }
 
-.basic_info{
-    font-family: 'Poppins', sans-serif;   
+.media{
+    max-width: 56%; 
+
 }
-    
+
+.personal_text {
+    float: right;
+    width: 480px;
+    height: 480px;
+}
+
+.avatar {
+    width: 440px;
+    height: 498px;
+}
+
+
+
+h5, h4, h2 {
+    font-family: 'Lato', sans-serif;
+}
+
+h5 {
+    font-size: 24px;
+}
+
+h2 {
+    font-size: 60px;
+}
+
+h4 {
+    font-size: 28px;
+}
+
+.basic_info {
+    font-family: 'Poppins', sans-serif; 
+    font-size: 26px;
+}
+
+a {
+
+}
